[package]
name = "hyper_byte"
version = "0.5.1"
license = "MIT"
authors = ["EasternGamer"]
edition = "2024"
description = "An unsafe, near-zero cost (1-2 instructions) byte transmuter to numeric types with fast byte reader"
keywords = ["unsafe", "byte", "convert", "numeric"]
repository = "https://github.com/EasternGamer/hyper_byte"
readme = "README.md"
exclude = [
    ".idea/*"
]

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
debug = true

[dependencies]
half = { version = "2.6.0", optional = true }

[features]
half = ["dep:half"]

[dev-dependencies]
half = "2.6.0"