[package]
name = "hyper_byte"
version = "0.7.0"
license = "MIT"
authors = ["EasternGamer"]
edition = "2024"
description = "An unsafe, near-zero cost (1-2 instructions) byte transmuter to numeric types with fast byte reader, writer, and read-writer"
keywords = ["unsafe", "byte", "convert", "numeric"]
repository = "https://github.com/EasternGamer/hyper_byte"
readme = "README.md"
exclude = [
    ".idea/*"
]

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
debug = true

[dependencies]
half = { version = "2.6.0", optional = true }
tokio = { version = "1.47.1", features = ["io-util"],  optional = true }

[features]
default = ["std"]
std = []
half = ["dep:half"]
tokio = ["dep:tokio"]

[dev-dependencies]
half = "2.6.0"
tokio = { version = "1.47.1", features = ["io-util"] }